# LibreTune

crates/libretune-app/: index.html  package-lock.json  package.json  vite.config.ts
crates/libretune-app/src/: App.css  App.tsx  PopOutWindow.css  PopOutWindow.tsx  main.tsx
crates/libretune-app/src-tauri/: tauri.conf.json
crates/libretune-app/src-tauri/resources/: demo.ini
crates/libretune-app/src-tauri/src/: lib.rs  paths.rs  port_editor.rs  state.rs  tests.rs
crates/libretune-app/src-tauri/src/commands/: adaptive_timing.rs  annotations.rs  base_map.rs  git.rs  (+51 more)
crates/libretune-app/src/__tests__/: App.integration.test.tsx
crates/libretune-app/src/components/: ActionRecorder.css  ActionRecorder.tsx  LoadingContext.css  PluginPanel.css  SettingsView.tsx  TabContentLazy.tsx  TabContentRouter.tsx  ToastContext.css  TuneHistoryPanel.css  WelcomeView.css
crates/libretune-app/src/contexts/: LoadingContext.tsx
crates/libretune-app/src/hooks/: useBackendEventListeners.ts  useIniDefaultsLoader.ts  usePersistTableChange.ts
crates/libretune-app/src/i18n/: index.ts  languages.ts
crates/libretune-app/src/menus/: buildMenuItems.ts  buildToolbarItems.tsx
crates/libretune-app/src/services/: openTarget.ts  realtimeListener.ts
crates/libretune-app/src/stores/: constantValuesStore.ts  constantsMetadataCache.ts  panelDefinitionCache.ts
crates/libretune-app/src/styles/: index.ts
crates/libretune-app/src/themes/: base.css  industrial.css  shell.css  theme-context.tsx  variables.css
crates/libretune-app/src/types/: app.ts
crates/libretune-app/src/utils/: buildSidebarItems.ts  debounce.ts  exitApplication.ts  formatError.ts  iniExpression.ts  menuAvailability.ts  resolveEmbeddedPanelKind.ts  sidebarIcons.ts  validateTableData.ts
crates/libretune-core/: Cargo.toml
crates/libretune-core/src/: lib.rs
crates/libretune-core/src/dash/: mod.rs  templates.rs
crates/libretune-core/src/ini/: encoding.rs  expression.rs  inc_tables.rs  mod.rs  parser.rs  types.rs
crates/libretune-core/src/project/: repository.rs
crates/libretune-core/src/tune_view/: mod.rs  parser.rs  types.rs  writer.rs
crates/libretune-core/tests/: ini_parsing.rs  stock_ts_tune_view_corpus.rs
docs/: architecture.md
(+157 files in other folders)
