[package]
name = "libretune-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for LibreTune ECU tuning software"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Serial communication
serialport = { workspace = true }
tokio-serial = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# CRC for protocol
crc32fast = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Random number generation (for demo mode)
rand = { workspace = true }

# Byte order handling
byteorder = "1.5"

# Regex for INI parsing
regex = "1.11"

# Expression evaluation for AutoTune custom filters
evalexpr = "11.3"

# XML parsing for TunerStudio dashboard format
quick-xml = { version = "0.37", features = ["serialize"] }
base64 = "0.22"

# Lua scripting engine (sandboxed)
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Directory paths
dirs = "5.0"
libc = "0.2.178"

# HTTP client for online INI repository (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Git integration for tune versioning (using vendored libgit2 + bundled SSL)
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# WebAssembly runtime for plugin system
wasmtime = { workspace = true }

# Text encoding detection (Windows-1252 fallback for legacy ECU INI files)
encoding_rs = "0.8"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.24.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]
